// Copyright 2023 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;
option go_package = "github.com/pipe-cd/pipecd/pkg/model";

import "validate/validate.proto";

enum LogSeverity {
    INFO = 0;
    SUCCESS = 1;
    ERROR = 2;
}

message LogBlock {
    // The index of log block.
    int64 index = 1;
    // The log content.
    string log = 2 [(validate.rules).string.min_len = 1];
    // Severity level for this block.
    LogSeverity severity = 3 [(validate.rules).enum.defined_only = true];
    // Unix time when the log block was created.
    int64 created_at = 14 [(validate.rules).int64.gt = 0];
}
